ex5/testdata/typechecker/error/ThisTest-err1.java
class ThisTest {
	public static void main(String[] a){
            ThisTest x;
            x = this; // TE
	}
}


